# sentinel

./: Cargo.toml  LICENSE.md
docs/: sentineld.txt
sample-configs/: go-server.yaml
src/: main.rs
src/models/: config.rs  mod.rs  procs.rs
src/utils/: mod.rs  proc_names.rs
