[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.29.0", features = ["process", "signal"] }
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
signal-hook = "0.3.17"
tokio = { version = "1.44.2", features = ["full"] }
